# opam

./: .gitattributes  .gitignore  .travis-ci.sh  .travis.yml  COPYRIGHT.windows  Makefile  Makefile.config.in  Makefile.win-compilers  OCamlMakefile  README.md  SHA512SUMS  appveyor.yml  appveyor_build.cmd  appveyor_test.sh  configure  configure.ac  dune-project  index.html  install.sh  jbuild-ignore  master_changes.md  opam-admin.opam  opam-client.opam  opam-core.opam  opam-devel.opam  opam-format.opam  opam-installer.opam  opam-repository.opam  opam-solver.opam  opam-state.opam  opam.install.in  opam.opam
.github/scripts/: archives-cache.sh  ci.ml  cygwin.cmd  hygiene.sh  legacy-cache.sh  main.sh  ocaml-cache.sh  opam-bs-cache.sh  preamble.sh
.github/scripts/main/: hygiene.sh  legacy-cache.sh  legacy.sh  main.sh  ocaml-cache.sh  preamble.sh
.github/workflows/: ci.ml  ci.yml  depexts.yml  lib.ml  macos.yml  main.yml  ubuntu.yml  windows.yml
admin-scripts/: compilers-to-packages.ml  ocaml_windows.ml  win-3.11.0.sh  win-4.00.0.sh  win-4.02.0.sh  win-4.03.0.sh  win.sh
doc/: Makefile
doc/man/: dune  opam-topics.inc
doc/pages/: Manual.md
m4/: ocaml.m4
release/: Makefile
shell/: bootstrap-ocaml.sh  context_flags.ml  findwinsdk  get-git-id.ml  install.ps1  install.sh  md5check.ml  msvs-detect  opam-detect.sh
src/: Makefile  cc64.sexp.in  dune  jbuild  jbuild.common  jbuild.config.in
src/client/: dune  jbuild  opamAction.ml  opamAdminCommand.ml  opamAdminRepoUpgrade.ml  opamArg.ml  opamArgTools.ml  opamAuxCommands.ml  opamCliMain.ml  opamClient.ml  opamClientConfig.ml  opamCommands.ml  opamConfigCommand.ml  opamConfigCommand.mli  opamInitDefaults.ml  opamInitDefaults.mli  opamListCommand.ml  opamMain.ml  opamPinCommand.ml  opamRepositoryCommand.ml  opamSolution.ml  opamSolution.mli  opamSwitchCommand.ml  opamSwitchCommand.mli
src/core/: core.ocp  dune  jbuild  opamCached.ml  opamCached.mli  opamCommonStubs.c  opamCommonStubs.mli  opamCompat.ml  opamCompat.mli  opamConsole.ml  opamConsole.mli  opamCoreConfig.ml.in  opamCoreConfig.mli  opamDirTrack.ml  opamDirTrack.mli  opamFilename.ml  opamFilename.mli  opamHash.ml  opamInject.c  opamProcess.ml  opamProcess.mli  opamStd.ml  opamStd.mli  opamStubs.dummy.ml  opamStubs.mli  opamStubs.win32.pp.ml  opamStubsTypes.ml  opamSystem.ml  opamSystem.mli  opamUrl.ml  opamWindows.c  stubs.c
src/format/: dune  format.ocp  jbuild  opamFile.ml  opamFile.mli  opamFilter.ml  opamFilter.mli  opamFormat.ml  opamFormat.mli  opamInterpLexer.mli  opamInterpLexer.mll  opamLineLexer.mll  opamPath.ml  opamPath.mli  opamTypes.mli  opamTypesBase.ml  opamTypesBase.mli
src/repository/: jbuild  opamDownload.ml  opamGit.ml  opamLocal.ml  opamRepositoryBackend.ml  opamVCS.ml
src/solver/: jbuild  opamActionGraph.ml  opamCudf.ml  opamSolver.ml  opamSolver.mli
src/state/: complete.lua  dune  jbuild  opamAction.ml  opamEnv.ml  opamEnv.mli  opamFileTools.ml  opamFormatUpgrade.ml  opamGlobalState.ml  opamOCaml.ml  opamPackageVar.ml  opamPath.ml  opamPath.mli  opamRepositoryState.ml  opamRepositoryState.mli  opamScript.mli  opamSolution.ml  opamSolution.mli  opamState.ml  opamStateConfig.ml  opamStateTypes.mli  opamSwitchAction.ml  opamSwitchAction.mli  opamSwitchState.ml  opamSwitchState.mli  opamSysInteract.ml  opamSysInteract.mli  opamSysPoll.ml  opamUpdate.ml
src/state/shellscripts/: env_hook.fish
src/stubs/: opamWindows.c
src/stubs/common/: dune  opamCommonStubs.c  opamCommonStubs.mli
src/stubs/win32/: dune  opamWin32Stubs.ml  opamWindows.c
src/tools/: dune  jbuild  opam-putenv.c  opam_admin_top.ml  opam_admin_top.mli  opam_format_upgrade.ml  opam_installer.ml
src_ext/: Makefile  Makefile.dune  Makefile.packages  Makefile.sources  dune-dose3-algo  dune-extlib-src
src_ext/patches/dune-local/: msvc.patch
src_ext/patches/extlib/: extlib-1.7.2.patch
src_ext/patches/ocamlbuild.pkg/: 0001-debug.patch  0002-debug.patch
src_ext/patches/opam_file_format.pkg/: 0001-Fix-installation-with-MSVC-ports.patch
src_ext/patches/sha/: msvc.patch
tests/: Makefile
tests/reftests/: deps-only.test  dune.inc  env-dra27.win32.test  env.unix.test  env.win32.test  init.win32.test  lint.test  pin.test  run.ml
